Changed vendor namesapce to SanchoBBDO.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sancho/api-auth-client",
+    "name": "sanchobbdo/api-auth-client",
     "description": "Guzzle authentication plugin for Ruby's api_auth gem.",
     "type": "library",
     "keywords": ["guzzle", "authentication", "api_auth", "ruby", "rest"],
@@ -17,8 +17,8 @@
     },
     "autoload": {
         "psr-0": {
-            "Sancho\\Tests\\Guzzle": "tests/",
-            "Sancho\\Guzzle": "src/"
+            "SanchoBBDO\\Tests\\Guzzle": "tests/",
+            "SanchoBBDO\\Guzzle": "src/"
         },
         "files": ["src/http_date.php"]
     }
