--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require-dev": {
-        "guzzle/guzzle": "~3.1",
-        "phpunit/phpunit": "3.7.*"
+        "guzzlehttp/guzzle": "~5.0",
+        "phpunit/phpunit": "4.*"
     },
     "autoload": {
         "psr-0": {
